fixed login form input field jumping issue

--- a/app/scss/pages/_login.scss
+++ b/app/scss/pages/_login.scss
@@ -42,6 +42,7 @@
 
     &__form {
         max-width: 570px;
+        flex: 1;
         header {
             margin-bottom: 30px;
         }
